Bugfixes: - correct link for google fonts; - add letter-spacing when font-size is specified; - fix font-family for .page-footer-logo-link; - fix css variable --state to --slate; - fix Out Portfolio title to Our Portfolio.

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ button {
 .header-contacts-link {
   font-weight: 400;
   line-height: 1.5;
-  color: var(--state);
+  color: var(--slate);
 }
 
 .header-nav-link:hover,
@@ -86,6 +86,7 @@ button {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07143;
+  letter-spacing: 0.02em;
   text-align: center;
   color: var(--white);
 }
@@ -107,6 +108,7 @@ button {
 .features-item-title {
   font-weight: 500;
   font-size: 20px;
+  letter-spacing: 0.02em;
   line-height: 1.2;
   color: var(--navy-blue);
 }
@@ -125,6 +127,7 @@ button {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11111;
+  letter-spacing: 0.02em;
   text-align: center;
   color: var(--navy-blue);
 }
@@ -137,6 +140,7 @@ button {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   text-align: center;
   color: var(--navy-blue);
 }
@@ -151,6 +155,7 @@ button {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11111;
+  letter-spacing: 0.02em;
   text-align: center;
   color: var(--navy-blue);
 }
@@ -159,6 +164,7 @@ button {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: var(--navy-blue);
 }
 
@@ -172,6 +178,7 @@ button {
 }
 
 .page-footer-logo-link {
+  font-family: var(--second-family);
   font-weight: 700;
   font-size: 18px;
   line-height: 1.16667;
